responsive of extralarge device

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     />
     <!-- Custom css link -->
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css">
 
     <title>Finsweet</title>
   </head>
@@ -135,7 +136,7 @@
                   <button class="customBtn banner--btn">View our work</button>
                 </div>
                 <div class="col-lg-6">
-                  <button class="customViewPricing px-4 ">View Pricing<i class="fa-sharp fa-light fa-arrow-right-long fa-beat-fade customRightArrow"></i></button>
+                  <button class="customViewPricing px-lg-4">View Pricing<i class="fa-sharp fa-light fa-arrow-right-long fa-beat-fade px-2 "></i></button>
                 </div>
               </div>
           
@@ -151,8 +152,6 @@
             </div>
           </div>
       </section>
-      
-      </div>
       <!-- BANNER PART END -->
     </header>
     <!-- HEADER PART END -->
@@ -288,42 +287,42 @@
           </div>
         </div>
         <div class="row py-4 g-4">
-          <div class="col-lg-4">
+          <div class="col-lg-6 col-xl-4">
            <div class="featureBottomContent">
             <a href="#"><i class="fa-light fa-users fa-beat-fade customFeatureIcon"></i></a>
             <h4 class="featureBottomContent__title">User Client First</h4>
             <p class="featureBottomContent__summary">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
            </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-6 col-xl-4">
             <div class="featureBottomContent">
              <a href="#"><i class="fa-sharp fa-solid fa-circle-check fa-beat-fade customFeatureIcon"></i></a>
              <h4 class="featureBottomContent__title">Two Free Revision Round</h4>
              <p class="featureBottomContent__summary">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
             </div>
            </div>
-           <div class="col-lg-4">
+           <div class="col-lg-6 col-xl-4">
             <div class="featureBottomContent">
              <a href="#"><i class="fa-light fa-file-pen fa-beat-fade customFeatureIcon"></i></a>
              <h4 class="featureBottomContent__title">Template Customization</h4>
              <p class="featureBottomContent__summary">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
             </div>
            </div>
-           <div class="col-lg-4">
+           <div class="col-lg-6 col-xl-4">
             <div class="featureBottomContent">
              <a href="#"><i class="fa-sharp fa-solid fa-headset fa-beat-fade customFeatureIcon"></i></a>
              <h4 class="featureBottomContent__title">24/7 Support</h4>
              <p class="featureBottomContent__summary">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
             </div>
            </div>
-           <div class="col-lg-4">
+           <div class="col-lg-6 col-xl-4">
             <div class="featureBottomContent">
              <a href="#"><i class="fa-sharp fa-solid fa-clock-twelve-thirty fa-beat-fade customFeatureIcon"></i></a>
              <h4 class="featureBottomContent__title">Quick Delivery</h4>
              <p class="featureBottomContent__summary">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam sed faucib turpis eu gravida mi. Pellentesque et velit aliquam sed mi. </p>
             </div>
            </div>
-           <div class="col-lg-4">
+           <div class="col-lg-6 col-xl-4">
             <div class="featureBottomContent">
              <a href="#"><i class="fa-duotone fa-solid fa-file-pen fa-beat-fade customFeatureIcon"></i></a>
              <h4 class="featureBottomContent__title">Hands-on approach</h4>
@@ -400,7 +399,7 @@
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
             <div class="accordion-body">
-           <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+           <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
         </div>
@@ -412,7 +411,7 @@
           </h2>
           <div id="three" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
-           <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+           <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
         </div>
@@ -424,7 +423,7 @@
           </h2>
           <div id="four" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
-           <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+           <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
         </div>
@@ -436,7 +435,7 @@
           </h2>
           <div id="five" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
             <div class="accordion-body">
-           <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+           <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
           </div>
         </div>
@@ -536,7 +535,7 @@
               <p class="footerTopLeftPartContent__details">
                 We are always open to discuss your project and improve your online presence.
               </p>
-              <div class="footerLeftPartMiddleContent d-flex justify-content-between">
+              <div class="footerLeftPartMiddleContent d-flex justify-content-lg-">
                 <h5 class="footerLeftPartMiddleContent__contact">Email me at <br> <span class="footerLeftPartMiddleContent__details">contact@website.com</span></h5>
                 <h5 class="footerLeftPartMiddleContent__contact">Call us <br>
                   <span class="footerLeftPartMiddleContent__details">0927 6277 28525</span>
