responsive of medium device

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="row justify-content-between">
           <div class="col-lg-3">
             <div class="reviewPartLeftContent">
-              <h2 class="reviewPartLeftContent__titile">What our clients say about us</h2>
+              <h2 class="reviewPartLeftContent__title">What our clients say about us</h2>
               <p class="reviewPartLeftContent__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.</p>
             </div>
           </div>
@@ -535,11 +535,15 @@
               <p class="footerTopLeftPartContent__details">
                 We are always open to discuss your project and improve your online presence.
               </p>
-              <div class="footerLeftPartMiddleContent d-flex justify-content-lg-">
-                <h5 class="footerLeftPartMiddleContent__contact">Email me at <br> <span class="footerLeftPartMiddleContent__details">contact@website.com</span></h5>
-                <h5 class="footerLeftPartMiddleContent__contact">Call us <br>
+              <div class="row customFooterLeftPartMiddleContent px-1">
+               <div class="col-lg-6">
+                <h5 class="footerLeftPartMiddleContent__contact">Email me at  <span class="footerLeftPartMiddleContent__details">contact@website.com</span></h5>
+               </div>
+               <div class="col-lg-6 d-flex flex-column">
+                <h5 class="footerLeftPartMiddleContent__contact">Call us <br> 
                   <span class="footerLeftPartMiddleContent__details">0927 6277 28525</span>
                 </h5>
+               </div>
               </div>
             </div>
           </div>
