responsive medium device

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class=""><i class="fa-regular fa-bars fa-beat-fade" style="color: #FFD43B;"></i></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -160,14 +160,14 @@
      <section id="workPart">
       <div class="container">
         <div class="row">
-          <div class="col-lg-5">
+          <div class="col-xl-5 text-center text-start">
             <h2 class="customWork_title">How we work</h2>
             <p class="customWork_summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
             <a class="customWork_touch" href="#">Get in touch with us<i class="fa-sharp fa-light fa-arrow-right-long fa-beat-fade customWork_arrow"></i></a>
           </div>
-          <div class="col-lg-6 offset-1">
+          <div class="col-xl-6 offset-xl-1 mt-5 mt-xl-0">
             <div class="row customWorkWrapper justify-content-between">
-              <div class="col-lg-6">
+              <div class="col-lg-6 text-center text-xl-start">
               <div class="workItem">
                 <picture>
                   <img src="./image/project part/workPart/pointer_1.png"  alt="pointer_1.png">
@@ -177,7 +177,7 @@
               </div>
               </div>
 
-              <div class="col-lg-6">
+              <div class="col-lg-6 text-center text-xl-start">
                 <div class="workItem">
                   <picture>
                     <img src="./image/project part/workPart/pointer_1.png"  alt="pointer_1.png">
@@ -187,7 +187,7 @@
                 </div>
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-lg-6 text-center text-xl-start">
                   <div class="workItem">
                     <picture>
                       <img src="./image/project part/workPart/pointer_1.png"  alt="pointer_1.png">
@@ -197,7 +197,7 @@
                   </div>
                   </div>
 
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 text-center text-xl-start">
                     <div class="workItem">
                       <picture>
                         <img src="./image/project part/workPart/pointer_1.png"  alt="pointer_1.png">
@@ -338,13 +338,13 @@
      <section id="reviewPart">
       <div class="container">
         <div class="row justify-content-between">
-          <div class="col-lg-3">
+          <div class="col-xl-4 text-center text-start w-100">
             <div class="reviewPartLeftContent">
-              <h2 class="reviewPartLeftContent__title">What our clients say about us</h2>
+              <h2 class="reviewPartLeftContent__title text-center text-xl-start ">What our clients say about us</h2>
               <p class="reviewPartLeftContent__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed.</p>
             </div>
           </div>
-          <div class="col-lg-8">
+          <div class="col-xl-8">
             <div class="row">
               <div class="col-lg-12">
                 <h3 class="reviewPartRightTopContent__title">"The best agency we’ve worked with so far. They our product and are able to add new features with a great focus."</h3>
@@ -368,82 +368,82 @@
     <!-- REVIEW PART END -->
 
     <!-- FAQ PART START -->
-<section id="faqPart">
-  <div class="container">
-  <div class="row">
-    <div class="col-lg-5">
-      <div class="faqLeftContent">
-        <h4 class="faqLeftContent__title">Frequently asked questions</h4>
-        <a href="#" class="faqLeftContent__info">Contact us for more info</a>
+    <section id="faqPart">
+      <div class="container">
+      <div class="row">
+        <div class="col-lg-5">
+          <div class="faqLeftContent">
+            <h4 class="faqLeftContent__title">Frequently asked questions</h4>
+            <a href="#" class="faqLeftContent__info">Contact us for more info</a>
+          </div>
+        </div>
+        <div class="col-lg-7">
+          <div class="accordion" id="accordionPanelsStayOpenExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                  <span class="text-info me-3 customAccordion__title">01</span>How much v  time does it take?
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordion-body">
+              <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
+                  <span class="text-info me-3">02</span>What is your class naming convention?
+                </button>
+              </h2>
+              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                <div class="accordion-body">
+              <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#three" aria-expanded="true" aria-controls="three">
+                  <span class="text-info me-3">03</span>How do you communicate?
+                </button>
+              </h2>
+              <div id="three" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordion-body">
+              <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#four" aria-expanded="true" aria-controls="four">
+                  <span class="text-info me-3">04</span>I have a bigger project. Can you handle it?
+                </button>
+              </h2>
+              <div id="four" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordion-body">
+              <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#five" aria-expanded="true" aria-controls="five">
+                  <span class="text-info me-3">05</span>What is your class naming convention?
+                </button>
+              </h2>
+              <div id="five" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordion-body">
+              <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="col-lg-7">
-      <div class="accordion" id="accordionPanelsStayOpenExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              <span class="text-info me-3 customAccordion__title">01</span>How much v  time does it take?
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-            <div class="accordion-body">
-           <p class="mx-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-            <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo">
-              <span class="text-info me-3">02</span>What is your class naming convention?
-            </button>
-          </h2>
-          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-            <div class="accordion-body">
-           <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#three" aria-expanded="true" aria-controls="three">
-              <span class="text-info me-3">03</span>How do you communicate?
-            </button>
-          </h2>
-          <div id="three" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
-            <div class="accordion-body">
-           <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#four" aria-expanded="true" aria-controls="four">
-              <span class="text-info me-3">04</span>I have a bigger project. Can you handle it?
-            </button>
-          </h2>
-          <div id="four" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
-            <div class="accordion-body">
-           <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button customAccordion__title" type="button" data-bs-toggle="collapse" data-bs-target="#five" aria-expanded="true" aria-controls="five">
-              <span class="text-info me-3">05</span>What is your class naming convention?
-            </button>
-          </h2>
-          <div id="five" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
-            <div class="accordion-body">
-           <p class="mx-3 customAccordion__summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        </div>
       </div>
-    </div>
-  </div>
-  </div>
-</section>
+    </section>
     <!-- FAQ PART END -->
     <!-- BUILDING PART START -->
      <section id="contactPart">
@@ -575,8 +575,8 @@
           <div class="col-lg-5 offset-lg-4">
             <div>
               <ul class="customCopyRight__item d-flex justify-content-between">
-                <li class="customCopyRight">home</li>
-                <li class="customCopyRight">about us</li>
+                <li class="customCopyRight">Home</li>
+                <li class="customCopyRight">About us</li>
                 <li class="customCopyRight">Features</li>
                 <li class="customCopyRight">Pricing</li>
                 <li class="customCopyRight">FAQ</li>
