responsive medium device

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <!-- NAVAR PART START -->
       <nav class="navbar navbar-expand-lg customNav">
         <div class="container">
+        <a class="navbar-brand" href="#">
           <picture>
             <img
               src="./image/logo.png"
@@ -67,6 +68,7 @@
               class="img-fluid w-100"
             />
           </picture>
+        </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -76,11 +78,11 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class=""><i class="fa-regular fa-bars fa-beat-fade" style="color: #FFD43B;"></i></span>
+            <span class="text-white"><i class="fa-regular fa-bars fa-beat-fade"></i></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="">
+              <li class="nav-item customNav">
                 <a
                   class="nav-link active customNavItem"
                   aria-current="page"
@@ -89,27 +91,27 @@
                 >
               </li>
 
-              <li class="">
+              <li class="nav-item customNav">
                 <a class="nav-link customNavItem" aria-current="page" href="#"
                   >About us</a
                 >
               </li>
-              <li class="">
+              <li class="nav-item customNav">
                 <a class="nav-link customNavItem" aria-current="page" href="#"
                   >Features</a
                 >
               </li>
-              <li class="">
+              <li class="nav-item customNav">
                 <a class="nav-link customNavItem" aria-current="page" href="#"
                   >Pricing</a
                 >
               </li>
-              <li class="">
+              <li class="nav-item customNav">
                 <a class="nav-link customNavItem" aria-current="page" href="#"
                   >FAQ</a
                 >
               </li>
-              <li class="">
+              <li class="nav-item customNav">
                 <a class="nav-link customNavItem" aria-current="page" href="#"
                   >Blog</a
                 >
